--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: #080202;
+    background-color: rgb(22, 207, 227);
     font-family: 'Poppins', sans-serif;
 }
 
@@ -123,6 +123,7 @@ body {
     cursor: pointer;
     display: none;
 }
+
 .header-content {
     margin-top: 200px;
     padding-bottom: 50px;
@@ -137,19 +138,23 @@ body {
     margin-left: 85px;
     width: 50%;
 }
+
 .slider-txt h1 {
     font-size: 60px;
     color: #FFFFFF;
     text-transform: uppercase;
     font-weight: 700;
 }
+
 .slider-txt p {
     font-size: 18px;
-    color: #a7a7a7;
+    color: #551d1d;
 }
+
 .botones {
     margin-top: 50px;
 }
+
 .btn-1 {
     display: inline-block;
     padding: 15px 35px;
@@ -160,4 +165,280 @@ body {
     text-transform: uppercase;
     margin-right: 28px;
     border-radius: 58px;
+}
+
+.btn-1:hover {
+    background-color: #D8241B;
+}
+
+.slider-img {
+    width: 50%;
+}
+
+.slider-img img {
+    margin-right: 225px;
+    width: 550px;
+}
+
+.products {
+    background-color: #0D0D0D;
+}
+
+.tabs {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 100px 0px;
+}
+
+.tabs label {
+    width: 15%;
+    order: 1;
+    display: block;
+    padding: 20px 0;
+    text-align: center;
+    cursor: pointer;
+    color: #A7A7A7;
+    font-weight: 700;
+    transition: background ease 0.2s;
+}
+
+.tabs .tab {
+    order: 99;
+    flex-grow: 1;
+    width: 100%;
+    display: none;
+    padding-top: 25px;
+}
+
+.tabs input [type="radio"] {
+    display: none;
+}
+
+.tabs input [type="radio"]:checked+label {
+    border-bottom: 2px solid #D8241B;
+    color: #FFFFFF;
+}
+
+.product {
+    display: flex;
+    align-items: center;
+    padding: 50%;
+    margin: 0 10px;
+}
+
+.product-img {
+    width: 50%;
+    text-align: left;
+}
+
+.product-img h4 {
+    display: inline-block;
+    padding: 5px 7px;
+    line-height: 15px;
+    color: #ffffff;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 800;
+    border: 2px solid #555555;
+    border-radius: 10px;
+    margin-bottom: 50px;
+}
+
+.product-img img {
+    width: 150px;
+    height: 120px;
+}
+
+.product-txt {
+    width: 50%;
+    margin-left: 10px;
+    text-align: left;
+}
+
+.product-txt h4 {
+    color: #FFFFFF;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 800;
+    margin-bottom: 15px;
+}
+
+.product-txt p {
+    color: #A7A7A7;
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+
+.product-txt span {
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: ;
+}
+
+.info {
+    padding: 100px 0px;
+    display: flex;
+    align-items: center;
+}
+
+.info-img {
+    width: 50%;
+}
+
+.info-img img {
+    width: 500px;
+    height: 250px;
+}
+
+.info-txt {
+    width: 50%;
+}
+
+.info-txt h2 {
+    font-size: 75px;
+    color: #FFFFFF;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+}
+
+.info-txt p {
+    font-size: 18px;
+    color: #551d1d;
+    margin-bottom: 50px;
+}
+
+.btn-2 {
+    display: inline-block;
+    padding: 15px 35px;
+    background-color: #D8241B;
+    color: #FFFFFF;
+    font-weight: 800;
+    text-transform: uppercase;
+    border-radius: 50px;
+}
+
+.btn-2:hover {
+    background-color: #55eb41;
+}
+
+.horario {
+    padding: 100px 0px;
+    background-color: #0D0D0D;
+}
+
+.horario-info h2 {
+    font-size: 75px;
+    color: #ffffff;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+}
+
+.txt {
+    color: #ffffff;
+}
+
+.txt h4 {
+    font-size: 18px;
+    color: #D8241B;
+    margin-bottom: 30px;
+}
+.txt p{
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.map {
+    filter: praycale(100%) invert(92%) contrast(93%);
+    margin-top: 30px;
+}
+
+.footer {
+    padding: 100px 0px;
+    display: flex;
+    justify-content: space-between;
+}
+.link h4 {
+    color: #FFFFFF;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+}
+.link ul li a{
+    color: #FFFFFF;
+    font-size: 16px;
+    margin-bottom: 5px;
+    display: inline-block;
+}
+
+@media (max-width: 900PX) {
+    .menu {
+        padding: 20px;
+        justify-content: space-between;
+    }
+    .menu-2{
+        display: none;
+    }
+    .logo-1{
+        width: 100px;
+    }
+    .logo-2 {
+        width: 0;
+    }
+    .menu label {
+        display: initial;
+    }
+    .menu .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: #551d1d;
+        display: none;
+    }
+    .menu .navbar ul li {
+        width: 100%;
+    }
+    #menu:checked ~ .navbar {
+        display: initial;
+    }
+    .header-content {
+        padding: 30px;
+        margin-top: 100px;
+    }
+    .slider {
+        flex-direction: column;
+    }
+    .slider-txt{
+        margin-left: 0;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .slider-txt h1 {
+        font-size: 50px;
+    }
+    .slider-txt p {
+        font-size: 16px;
+    }
+    .btn-1 {
+        padding: 10px 25px;
+        font-size: 14px;
+    }
+    .slider-img {
+       width: 100%;
+       text-align: center; 
+    }
+    .slider-img img {
+        margin-right: 0px;
+        width: 300px;
+    }
+    .swiper-horizontal > .swiper-pagination-bullets,
+    .swiper-pagination-bullet, .swiper-pagination-horizontal,
+    .swiper-pagination-custon,
+    .swiper-pagination-fraction {
+        bottom: -7px;
+    }
 }
