--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@
 }
 
 body {
-    background-color: rgb(22, 207, 227);
+    background-color: rgb(31, 159, 190);
     font-family: 'Poppins', sans-serif;
 }
+
 
 .container {
     max-width: 1200px;
@@ -214,11 +215,13 @@ body {
     display: none;
 }
 
-.tabs input [type="radio"]:checked+label {
+.tabs input [type="radio"]:checked + label {
     border-bottom: 2px solid #D8241B;
     color: #FFFFFF;
 }
-
+.tabs input [type="radio"]:checked + label + .tap {
+    display: block;
+}
 .product {
     display: flex;
     align-items: center;
@@ -328,9 +331,9 @@ body {
 }
 
 .horario-info h2 {
-    font-size: 75px;
+    font-size: 55px;
     color: #ffffff;
-    font-weight: 800;
+    font-weight: 600;
     text-transform: uppercase;
     margin-bottom: 50px;
 }
@@ -344,7 +347,8 @@ body {
     color: #D8241B;
     margin-bottom: 30px;
 }
-.txt p{
+
+.txt p {
     font-size: 18px;
     text-transform: uppercase;
     font-weight: 600;
@@ -361,12 +365,14 @@ body {
     display: flex;
     justify-content: space-between;
 }
+
 .link h4 {
     color: #FFFFFF;
     text-transform: uppercase;
     margin-bottom: 25px;
 }
-.link ul li a{
+
+.link ul li a {
     color: #FFFFFF;
     font-size: 16px;
     margin-bottom: 5px;
@@ -378,18 +384,23 @@ body {
         padding: 20px;
         justify-content: space-between;
     }
-    .menu-2{
+
+    .menu-2 {
         display: none;
     }
-    .logo-1{
+
+    .logo-1 {
         width: 100px;
     }
+
     .logo-2 {
         width: 0;
     }
+
     .menu label {
         display: initial;
     }
+
     .menu .navbar {
         position: absolute;
         top: 100%;
@@ -398,47 +409,132 @@ body {
         background-color: #551d1d;
         display: none;
     }
+
     .menu .navbar ul li {
         width: 100%;
     }
-    #menu:checked ~ .navbar {
+
+    #menu:checked~.navbar {
         display: initial;
     }
+
     .header-content {
         padding: 30px;
         margin-top: 100px;
     }
+
     .slider {
         flex-direction: column;
     }
-    .slider-txt{
+
+    .slider-txt {
         margin-left: 0;
         width: 100%;
         text-align: center;
         margin-bottom: 50px;
     }
+
     .slider-txt h1 {
         font-size: 50px;
     }
+
     .slider-txt p {
         font-size: 16px;
     }
+
     .btn-1 {
         padding: 10px 25px;
         font-size: 14px;
     }
+
     .slider-img {
-       width: 100%;
-       text-align: center; 
+        width: 100%;
+        text-align: center;
     }
+
     .slider-img img {
         margin-right: 0px;
         width: 300px;
     }
-    .swiper-horizontal > .swiper-pagination-bullets,
-    .swiper-pagination-bullet, .swiper-pagination-horizontal,
+
+    .swiper-horizontal>.swiper-pagination-bullets,
+    .swiper-pagination-bullet,
+    .swiper-pagination-horizontal,
     .swiper-pagination-custon,
     .swiper-pagination-fraction {
         bottom: -7px;
+    }
+
+    .tabs {
+        padding: 50px 30px;
+    }
+
+    .tabs label {
+        width: 33%;
+    }
+
+    .info {
+        padding: 30px;
+        flex-direction: column;
+    }
+
+    .info-img {
+        width: 100%;
+        text-align: center;
+    }
+
+    .info-img img {
+        width: 400px;
+        height: 200px;
+        margin-bottom: 25px;
+    }
+
+    .info-txt {
+        width: 100%;
+        text-align: center;
+    }
+
+    .info-txt h2 {
+        font-size: 50px;
+    }
+
+    .info-txt p {
+        font-size: 16px;
+    }
+
+    .btn-1 {
+        font-size: 16px;
+    }
+
+    .horario {
+        padding: 30px;
+        text-align: center;
+    }
+
+    .horario-info h2 {
+        font-size: 50px;
+        margin-bottom: 15px;
+    }
+
+    .horario-txt {
+        flex-direction: column;
+    }
+
+    .socials {
+        justify-content: center;
+    }
+
+    .social img {
+        margin: 8px 0 0 0;
+    }
+
+    .footer {
+        padding: 30px;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .link h4 {
+        margin: 25px 0px 10px 0px;
     }
 }
